# vscrebook

./: .eslintrc.json  .gitignore  .gitmodules  .gitpod.yml  .vscodeignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.cmd  builddebug.cmd  check.cmd  eslint.config.mjs  gulpfile.js  lerna.json  package-lock.json  package.json  pnpm-lock.yaml  swcrc.js  tsconfig.json  webpack.config.js
crawl/: Cargo.toml  b
crawl-src/: Cargo.toml  b
crawl-src/src/: lib.rs
crawl/src/: config.rs  lib.rs  search_book.rs  utils.rs
crawl/src/crawlers/: aixiashu.rs  caimoge.rs  crawl.rs  maxreader.rs  mod.rs  wbxsw.rs
extension/: .eslintrc.json  .swcrc.js  .vscodeignore  CHANGELOG.md  README.md  eslint.config.mjs  package.json  rspack.config.js  tsconfig.json  webpack.config.js
extension/scripts/: build.js  runRspack.js  runWebpack.js
extension/src/: command.ts  extension.ts  index.d.ts
scripts/: build.js  build.mjs  runCmd.js  runCmd.mjs  runWebpack.js  script.mjs
src/: book.ts  define_in_js.ts  error.ts  extension.ts  index.d.ts
src/components/: Book.ts  Library.ts
src/core/: add.ts  bookList.ts  config.ts  delete.ts  imexport.ts  index.ts  searchCtx.ts  select.ts  settings.ts  show.ts  utils.ts
src/crawl/: Crawl.ts  crawl_config.ts  fetch.ts  index.ts  inter.ts  utils.ts
src/crawl/sub/: aixiashu.ts  caimoge.ts  wbxsw.ts
src/lib/: Book.ts  Library.ts  index.d.ts  utils.ts
src/test/: test.ts
src/utils/: bookList.ts  config.ts  crawl.ts  debug.ts  error.ts  ext.ts  index.ts  operBookList.ts  operConfig.ts  operStatusBar.ts  show.ts  showing.ts  statusBar.ts
(+1 files in other folders)
