[package]
name = "crawl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen = {version = "0.2"}
tokio = {version = "1", features = ["full"]}
reqwest = "0.11"
async-trait = "0.1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"

[lib]
crate-type = ["cdylib"]
