[package]
name = "crawl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen = {version = "0.2"}
# tokio = {version = "1", features = ["full"]}
reqwest = {version = "0.11", features = ["blocking"]}
async-trait = "0.1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
js-sys = "0.3"
nipper = "0.1"
futures = "0.3"

[lib]
crate-type = ["cdylib"]
